--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,4 @@
 @import "components/_first.css";
 @import "components/_become.css";
 @import "components/_featured.css";
+@import "components/_featuredVideos.css";
