Coming soon I am going to finish this project

--- a/css/_overall.css
+++ b/css/_overall.css
@@ -38,3 +38,10 @@ input[type="search"]::-webkit-search-results-decoration {
 	text-align: center;
 	max-width: none;
 }
+
+.input-reset {
+	padding: 0;
+	margin: 0;
+	border: 0;
+	border: none;
+}
