--- a/css/_variabales.css
+++ b/css/_variabales.css
@@ -4,4 +4,6 @@
 	--dark-color: #1c2e3d;
 	--accent-color: #e8594e;
 	--neptun-color: #73afba;
+	--accent-hover-color: #f82112;
+	--neptun-hover-color: #35cbe6;
 }
