--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,6 @@
 @import "components/_become.css";
 @import "components/_featured.css";
 @import "components/_featuredVideos.css";
+@import "components/_newsletter.css";
+@import "components/_inspirations.css";
+@import "components/_footer.css";
