--- a/css/components/_featured.css
+++ b/css/components/_featured.css
@@ -80,6 +80,12 @@
 	text-align: center;
 	letter-spacing: 2.18182px;
 	text-transform: uppercase;
+	transition: background-color 0.3s;
+}
+
+.blog__article-link:hover {
+	background-color: var(--neptun-hover-color);
+	transition: background-color 0.3s;
 }
 
 .feature__list-article {
