--- a/css/components/_header.css
+++ b/css/components/_header.css
@@ -91,6 +91,7 @@
 	height: 100%;
 	z-index: 999;
 	background-color: var(--neptun-color);
+	transition: left 0.3s;
 }
 
 .menu__nav {
@@ -108,6 +109,8 @@
 	font-weight: 700;
 	font-size: 40px;
 	margin-bottom: 20px;
+	padding: 30px 0;
+	overflow-y: auto;
 }
 
 .menu__link {
@@ -124,7 +127,7 @@
 
 .menu__close {
 	position: absolute;
-	right: 5%;
+	right: 10%;
 	top: 10%;
 	width: 40px;
 	height: 40px;
@@ -147,4 +150,13 @@
 .menu__close--line:last-child {
 	/* transform-origin: right top; */
 	transform: rotate(-45deg);
+}
+
+.d-none {
+	left: -150vw;
+}
+
+.d-show {
+	left: 0;
+	transition: left 0.3s;
 }
