--- a/css/components/_inspirations.css
+++ b/css/components/_inspirations.css
@@ -34,6 +34,7 @@
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
+	overflow: hidden;
 }
 
 .inspirations-item::after {
