--- a/css/style.css
+++ b/css/style.css
@@ -14,3 +14,4 @@
 @import "components/_newsletter.css";
 @import "components/_inspirations.css";
 @import "components/_footer.css";
+@import "components/_media.css";
