--- a/css/components/_featured.css
+++ b/css/components/_featured.css
@@ -130,3 +130,69 @@
 	margin-left: 32px;
 	padding-right: 35px;
 }
+
+.featured__burger--show {
+	position: absolute;
+	top: 0;
+	right: 0;
+	display: flex;
+	flex-wrap: wrap;
+	margin-top: 40px;
+	transition: right 0.3s;
+}
+
+.transition__left {
+	right: 70%;
+}
+
+.featured__burger--show h2 {
+	color: #000;
+	font-size: 29px;
+	margin-bottom: 0;
+	margin-right: 50px;
+}
+
+.featured__burger {
+	position: relative;
+	width: 50px;
+	height: 30px;
+	margin-right: 20px;
+}
+
+.featured__burger--line {
+	width: 100%;
+	height: 2px;
+	background-color: var(--black-color);
+	display: block;
+	position: absolute;
+	top: 0;
+	left: 0;
+	transition: background-color 0.3s;
+}
+
+.featured__burger--line:nth-child(1) {
+	margin-top: 7px;
+}
+
+.featured__burger--line:nth-child(2) {
+	margin-top: 14px;
+	height: 1.3px;
+}
+
+.featured__burger--title {
+	max-width: 368px;
+	font-weight: 700;
+	font-size: 64px;
+	line-height: 14px;
+	color: var(--black-color);
+	margin-bottom: 64px;
+}
+
+.close__featured--stories {
+	position: absolute;
+	top: 10px;
+	left: -80px;
+	width: 70px;
+	height: 70px;
+}
+
