--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,4 @@
 @import "components/_inspirations.css";
 @import "components/_footer.css";
 @import "components/_media.css";
+@import "components/_modal.css";
