--- a/css/components/_media.css
+++ b/css/components/_media.css
@@ -110,7 +110,7 @@
 	}
 
 	.first__slider-btn {
-		bottom: 40px;
+		bottom: 39px;
 	}
 
 	.inspirations-list {
@@ -137,10 +137,6 @@
 
 	.main-slider__text {
 		height: 92px;
-	}
-
-	.first__slider-btn {
-		bottom: 40px;
 	}
 
 	.fisrt__form {
@@ -235,7 +231,9 @@
 	}
 
 	.first__slider-btn {
-		bottom: 80px;
+		bottom: 29px;
+		width: 29px;
+		height: 32px;
 	}
 
 	.footer__container {
@@ -258,6 +256,14 @@
 	.first__container {
 		padding-top: 125px;
 	}
+
+	.btn-left {
+		left: 20px;
+	}
+
+	.btn-right {
+		right: 20px;
+	}
 }
 
 @media (max-width: 576px) {
@@ -271,6 +277,46 @@
 		width: 100%;
 		flex-direction: column-reverse;
 		align-items: stretch;
+		margin-top: 50px;
+	}
+
+	.first__container {
+		padding-top: 130px;
+		padding-bottom: 50px;
+	}
+
+	.first__title {
+		max-width: none;
+	}
+
+	.first__descr {
+		max-width: none;
+		font-size: 17px;
+		line-height: 23px;
+	}
+
+	.become__item {
+		width: 100%;
+		margin-right: 0;
+		margin-bottom: 30px;
+	}
+
+	.blog__article-title {
+		max-width: none;
+	}
+
+	.blog__article-descr {
+		min-width: none;
+	}
+
+	.become__title {
+		font-size: 44px;
+		max-width: none;
+		line-height: 65px;
+	}
+
+	.search-form {
+		width: 100%;
 	}
 
 	.first {
@@ -281,10 +327,256 @@
 	.first__title {
 		max-width: 98%;
 	}
+
+	.slider-container .swiper-slide {
+		width: calc(100% - 60px);
+	}
+
+	.slider-container .swiper-slide-active {
+		transform: none;
+	}
+
+	.slider-container .slide-play {
+		height: 60px;
+		width: 60px;
+		top: 13px;
+    left: 10px;
+	}
+
+	.slider-container {
+    margin-top: 1px;
+    padding: 30px 0;
+	}
+
+	.slider-container .slide-title {
+		font-size: 27px;
+	}
+
+	.section__title {
+		min-width: none;
+		font-size: 45px;
+		line-height: 55px;
+	}
+
+	.news-letter__text {
+    margin-left: 17px;
+	}
+
+	.news-letter__form {
+		position: static;
+		transform: none;
+		width: 100%;
+		margin-top: 30px;
+		height: auto;
+	}
+
+	.subscribe-form__btn {
+		padding: 30px 50px;
+	}
+
+	.news-letter__content {
+		flex-direction: column;
+		padding: 30px 13px;
+	}
+
+	.news-letter {
+    margin-bottom: 14px;
+}
+
+	.news-letter__styleOfInput {
+		width: calc(100% - 30px);
+	}
+
+	.inspirations {
+		padding-top: 25px;
+	}
+
+	.inspirations-descr {
+		margin-bottom: 39px;
+	}
+
+	.footer__column:last-child {
+		margin-top: 0;
+	}
+
+	.footer__column {
+		width: 100%;
+		margin-bottom: 30px;
+		text-align: center;
+	}
+
+	.footer__title::after {
+		left: 216px;
+	}
+
+	.subs-form {
+		width: 100%;
+	}
+
+	.footer__bottom {
+		margin-top: 31px;
+	}
+
+	.footer__copy {
+		max-width: none;
+		width: 100%;
+		margin-bottom: 30px;
+	}
+
+	.bottom__footer--container {
+		flex-wrap: wrap;
+	}
+
+	.footer-bottom__links {
+		margin: 0 10px;
+	}
+}
+
+@media (max-width: 441px) {
+	.become__list {
+		flex-direction: column-reverse;
+	}
+
+	.featured__title {
+		font-size: 44px;
+		line-height: 46px;
+	}
+
+	.close__featured--stories {
+		width: 40px;
+		height: 40px;
+		left: -50px;
+	}
+
+	.featured__stories {
+		width: 82%;
+	}
 }
 
 @media (max-width: 375px) {
+	.container {
+		padding: 0 15px;
+	}
 
+	.first__container {
+		padding-top: 70px;
+		padding-bottom: 70px;
+	}
+
+	.feature__list-item:last-child {
+		display: none;
+	}
+
+	.featured__burger--show h2 {
+		margin-right: 8px;
+		font-size: 24px;
+	}
+
+	.slider-container .slide-title {
+		margin-left: 18px;
+	}
+
+	.footer {
+		padding-top: 41px;
+	}
+
+	.footer__title::after {
+    	left: 107px;
+	}
+
+	.header__container {
+		padding: 30px;
+	}
+
+	.social {
+		display: none;
+	}
+
+	.menu__list {
+		font-size: 30px;
+	}
+
+	.btn-left {
+		left: 9px;
+	}
+
+	.btn-right {
+		right: 9px;
+	}
+
+	.menu {
+		min-height: 550px;
+	}
+
+	.first__link {
+		font-size: 7px;
+		padding: 10px 20px;
+	}
+
+	.first__title {
+		font-size: 55px;
+		line-height: 60px;
+	}
+
+	.search-form__field {
+		padding-left: 30px;
+		padding-right: 50px;
+	}
+
+	.search-form__button {
+		right: 20px;
+	}
+
+	.blog__article-title {
+		font-size: 32px;
+    	line-height: 40px;
+	}
+
+	.featured {
+		height: 769px;
+	}
+
+	.featured__stories {
+		padding: 29px 19px;
+	}
+
+	.feature__list-text {
+		margin-left: 18px;
+	}
+
+	.featured__videos-title {
+		margin-top: 34px;
+	}
+
+	.slider-container .swiper-slide {
+		width: calc(100% - 30px);
+	}
+
+	.subscribe-form__btn {
+		margin-top: 28px;
+	}
+
+	.news-letter__form {
+		padding-top: 18px;
+	}
+
+	.insp-item__link {
+		right: 14px;
+		top: 18px;
+	}
+
+	.button-insp__play {
+		left: 14px;
+    	top: 18px;
+	}
+
+	.inspirations {
+		padding-bottom: 49px;
+	}
+
+	.footer-bottom__links {
+		margin: 0 -8px;
+	}
 }
 
 @media (max-height: 807px) {
@@ -295,6 +587,6 @@
 
 @media (max-height: 781px) {
 	.first__slider-btn {
-		bottom: 36px;
+		bottom: 32px;
 	}
 }
