--- a/css/components/_modal.css
+++ b/css/components/_modal.css
@@ -35,8 +35,8 @@
 }
 
 .modal--1 {
-	width: 670px;
-	height: 350px;
+	width: 737px;
+	height: 452px;
 }
 
 .read__books {
@@ -65,11 +65,12 @@
 
 .read__book--list {
 	margin-top: 25px;
+	max-height: 300px;
 }
 
 .read__book--item {
 	width: 100%;
-	padding-right: 15px;
+	padding-right: 25px;
 	margin-bottom: 15px;
 	font-size: 25px;
 	text-decoration: underline;
@@ -170,7 +171,7 @@
 	height: 50px;
 	border-radius: 12px;
 	color: var(--white-color);
-	margin-top: 25px;
+	margin-top: 5px;
 	background-color: var(--neptun-color);
 }
 
@@ -221,4 +222,23 @@
 	transition: .2s;
 }
 
+.add__book--limit {
+	padding-left: 35px;
+	max-width: 300px;
+	color: var(--accent-color);
+	position: relative;
+}
+
+.add__book--limit::after {
+	content: "";
+	position: absolute;
+	top: 10px;
+	left: 0;
+	background-image: url(../../img/icons/exclamation-mark.png);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	width: 30px;
+	height: 30px;
+}
 
